# pro-sem_floppy_bird

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/flappy_robot/lib/flappy_robot/: game_logic  game_window  keyboard_controller  visualization
install/flappy_robot/share/flappy_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/flappy_robot/share/flappy_robot/launch/: flappy.launch.py
install/flappy_robot/share/flappy_robot/msg/: FlappyStatus.msg
install/flappy_robot_msgs/include/flappy_robot_msgs/flappy_robot_msgs/msg/: flappy_status.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/flappy_robot_msgs/share/flappy_robot_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/flappy_robot_msgs/share/flappy_robot_msgs/cmake/: ament_cmake_export_targets-extras.cmake  export_flappy_robot_msgs__rosidl_generator_cppExport.cmake  export_flappy_robot_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  flappy_robot_msgsConfig.cmake  flappy_robot_msgs__rosidl_typesupport_cExport.cmake  flappy_robot_msgs__rosidl_typesupport_introspection_cExport.cmake  flappy_robot_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
install/flappy_robot_msgs/share/flappy_robot_msgs/msg/: FlappyStatus.idl  FlappyStatus.json
install/flappy_robot_msgs/share/flappy_robot_msgs/rust/: Cargo.toml
install/two_wheeled_robot/share/two_wheeled_robot/: local_setup.sh  package.ps1  package.sh
install/two_wheeled_robot/share/two_wheeled_robot/launch/: load_world_into_gazebo.launch.py
log/: latest_build
src/flappy_robot/: README.md  package.xml  setup.cfg  setup.py
src/flappy_robot/flappy_robot/: game_logic.py  game_window.py  visualization.py
src/flappy_robot/launch/: flappy.launch.py
src/flappy_robot_msgs/: CMakeLists.txt
src/flappy_robot_msgs/msg/: FlappyStatus.msg
src/two_wheeled_robot/: CMakeLists.txt  package.xml
(+15 files in other folders)
