<?xml version="1.0"?>
<package format="3">
  <name>two_wheeled_robot</name>
  <version>0.0.1</version>
  <description>Two Wheeled Robot Package</description>
  <maintainer email="sovannlydakiv@email.com">chiv</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
