<?xml version="1.0"?>
<package format="3">
  <name>flappy_robot</name>
  <version>0.0.1</version>
  <description>Flappy Robot ROS2 Mini Project</description>
  <maintainer email="sovannlydakiv@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>flappy_robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
